[package]
name = "awstream"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
bincode = "0.8"
byteorder = "1"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.0-beta.4"
futures = "0.1"
log = "*"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"

[[bin]]
doc = false
name = "main"
path = "src/main.rs"
