[package]
name = "awstream"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
average = "0.6.2"
bincode = "0.8"
byteorder = "1"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.4"
csv = "1.0.0-beta.4"
env_logger = "0.3"
futures = "0.1"
log = "*"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"

[[bin]]
name = "client"

[[bin]]
name = "server"
