[package]
name = "video-analytics"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]

[dependencies]
csv = "0.15.0"
env_logger = "0.3.5"
error-chain = "0.7"
gstreamer = { git = "https://github.com/nebgnahz/gstreamer1.0-rs", branch = "macos" }
log = "0.3.5"
schedule_recv = "0.1.0"
time = "0.1.35"

[dependencies.darknet]
git = "https://github.com/nebgnahz/darknet-rs"
rev = "e2ca937b87bca595b3b6681c21cbeb0b78cc0f97"

[dependencies.cv]
git = "https://github.com/nebgnahz/cv-rs"
rev = "b6edd1ef32492b8cef78da3b5ef773c3d604596d"
features = [ "gpu" ]

[[bin]]
name = "main"
doc = false